Update Firebase database URL to new endpoint

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyAmXefCI3Ot0VJdxHPp-Hn52gKj4Z9ycH8",
             authDomain: "qatarat-qat.firebaseapp.com",
-            databaseURL: "https://qatarat-qat-default-rtdb.firebaseio.com",
+            databaseURL: "https://qatarat-qat-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "qatarat-qat",
             storageBucket: "qatarat-qat.firebasestorage.app",
             messagingSenderId: "804999564837",
