--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>مبادرة صدقات</title>
+    <title>مبادرة صدقات الخيرية</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;600;700&family=Cairo:wght@600;700;800&display=swap" rel="stylesheet">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     
@@ -986,7 +986,7 @@
             <div class="logo-section">
                 <div class="logo">💧</div>
                 <div class="header-text">
-                    <h1>مبادرة صدقات</h1>
+                    <h1>مبادرة صدقات الخيرية</h1>
                     <p>كل قطرة تصنع فرقاً</p>
                 </div>
             </div>
@@ -1548,7 +1548,7 @@
                             </div>
                             <div class="preview-images" id="receiptPrev"></div>
                         </div>
-                        <button type="submit" class="btn btn-primary">✅ تأكيد التبرع</button>
+                        <button type="submit" class="btn btn-primary">✅ تأكيد التصدق</button>
                     </form>
                 </div>
             `;
